tests/ui/nll/issue-57265-return-type-wf-check.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-57265-return-type-wf-check.rs:20:23
   |
LL |     let (_, z) = foo(&"hello".to_string());
   |                  -----^^^^^^^^^^^^^^^^^^^-- temporary value is freed at the end of this statement
   |                  |    |
   |                  |    creates a temporary value which is freed while still in use
   |                  argument requires that borrow lasts for `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
